# moe-routing-atlas

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  merged_test.jsonl  pyproject.toml  test_traces_1.jsonl  test_traces_2.jsonl  test_traces_combined.json
.github/workflows/: ci.yml  release.yml
src/moe_routing_atlas/: __init__.py  __version__.py  asgi.py  backend.py  batch_tracer.py  capture.py  categorizer.py  cli.py  config.py  exporter.py  schema.py  tracer.py
src/moe_routing_atlas/visualizer/: __init__.py  bootstrap.js  importmap.json  index.html  viz.js
src/moe_routing_atlas/visualizer/engine/: arch-config.js  create-renderer.js  flow-system.js  heatmap-rail.js  hud.js  layout.js  model-params.js  moe-visual-engine.js  shaders.js
tests/: __init__.py  test_backend.py  test_categorizer.py  test_exporter.py  test_schema.py
