[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moe-atlas"
version = "0.3.0"
description = "Open-source toolkit for mapping and visualizing Mixture-of-Experts model routing patterns"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MoE Atlas Contributors"}
]
keywords = [
    "mixture-of-experts",
    "moe",
    "neural-network",
    "visualization",
    "transformers",
    "routing",
    "interpretability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.25.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
moe-atlas = "moe_routing_atlas.cli:main"

[project.urls]
Homepage = "https://github.com/DJLougen/moe-routing-atlas"
Documentation = "https://github.com/DJLougen/moe-routing-atlas#readme"
Repository = "https://github.com/DJLougen/moe-routing-atlas"
Issues = "https://github.com/DJLougen/moe-routing-atlas/issues"
Changelog = "https://github.com/DJLougen/moe-routing-atlas/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/moe_routing_atlas"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CONTRIBUTING.md",
    "/CHANGELOG.md",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
